# fin_data_project

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt
infra/terraform/: artifact_registry.tf  bigquery.tf  cloud_run.tf  iam.tf  outputs.tf  scheduler.tf  secret_manager.tf  storage.tf  terraform.tfvars.example  variables.tf
src/config/: company_dimension.py  settings.py  watchlist.yaml  watchlist_loader.py
src/extractors/: base.py  registry.py
src/extractors/crypto/: base_crypto_extractor.py  binance_extractor.py  coingecko_extractor.py
src/extractors/stocks/: base_stock_extractor.py  brapi_extractor.py  yahoo_extractor.py
src/loaders/: base_loader.py  bigquery_loader.py  local_loader.py  registry.py
src/ml/: backtest.py  data.py  dividend_data.py  evaluation.py  features.py  fundamentals_data.py  macro_data.py  metrics.py  models.py  news_data.py  predict.py  selection.py  storage.py  train.py  tuning.py
src/models/: schemas.py
src/pipelines/: backfill.py  backfill_stocks.py  main.py  run_crypto.py  run_stocks.py  runner.py
src/storage/: raw_storage.py
