[project]
name = "fin-data-project"
version = "0.1.0"
description = "Financial market data extraction framework, built for GCP/BigQuery"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "pydantic>=2.6",
    "PyYAML>=6.0",
    "google-cloud-bigquery>=3.20",
    "google-cloud-storage>=2.16",
    "pandas>=2.2",
    "db-dtypes>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
]

[tool.setuptools.packages.find]
where = ["src"]
